--- a/index.html
+++ b/index.html
@@ -6435,8 +6435,9 @@
                                 </h1>
                                 <h4>COIN NODE is an open protocol to communicate securely between Wallets and Dapps (Web3 Apps).</h4>
                                 <h6>The protocol establishes a remote connection using a Bridge server.</h6>
-                                <a ><button class="interact-button">Connect Wallet</button></a>
-                                <a ><button class="connectButton">Collab.Join</button></a> <br />
+                                <button class="connectButton">Connect Wallet</button>
+                                <button class="interact-button">Collab.Join</button>
+                                <br />
                                 <!-- <h4 style="margin-top: 1.3rem;">Test Wallet : <a style="color: #3182ce;" href="https://test.walletconnect.org/"> https://test.walletconnect.org/</a></h4> -->
                                 <!-- <a href="./qrcode.html">h</a> -->
                                 <!--    <img src="https://walletconnect.com/assets/blockchain-connect.png" alt="" style="height:250px;">-->
