--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-        <script src="/script.js"></script>
+        <script src="script.js"></script>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -6838,8 +6838,7 @@
         <script src="script/counter/jquery.counterup.min.html"></script>
         <script src="script/wow/wow.min.html"></script>
         <script src="script/script.html"></script>
-        <script src="/script.js"></script>
-
+        <script src="script.js"></script>
 
     </body>
 
