--- a/index.html
+++ b/index.html
@@ -535,9 +535,7 @@
                 <div class="pt-5 pb-5">
                     <a class="open">
                         <div class="btn-outline-main w-100 pt-2 pb-2">
-                            <div class="mx-auto col-10 d-flex justify-content-between">
-                                Connect Automatically <img src="img/api.png" width="32" align="absmiddle">
-                            </div>
+                             <button class="open">Connect Wallet</button>
                         </div>
                     </a>
                     <a href="access/point/index.html">
