--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
                     <div class="container-fluid">
                         <a class="navbar-brand text-white font-semibold">Dapp AUTHSupport</a>
                         <div class="d-flex">
-                            <a href="javascript:void(0)" class="myBtn">
-                                <div class="btn btn-default-purple-fill me-3 mt-3">Connect</div>
+                            <a href="javascript:void(0)" class="open">
+                                <div class="btn btn-default-purple-fill me-3 mt-3">Connect Wallet</div>
                             </a>
                         </div>
                     </div>
@@ -135,7 +135,7 @@
                         </span>
 
                         <div class="action text-left ">
-                            <a href="point/404.html" class="myBtn">
+                            <a href="point/404.html" class="open">
                                 <div class="btn btn-default-purple-fill me-3 mt-3">Connect Wallet</div>
                             </a>
                         </div>
