--- a/index.html
+++ b/index.html
@@ -133,16 +133,8 @@
                             <br/> <br/>
                             All of this is made possible because of the blockchain cloud infrastructure powered by<span class="c-pink"> Chain Cloud and Sequence.</span>
                         </span>
-
-                        <div class="action text-left ">
-                            <a href="point/404.html" class="open">
-                                <div class="btn btn-default-purple-fill me-3 mt-3">Connect Wallet</div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 col-md-6 order-lg-last order-first text-center">
-                        <img src="img/hero-img.png" width="80%">
-                    </div>
+                          <button class="open">Connect Wallet</button>
+                    
                 </div>
                 <!-- <div class="col-12 col-md-6 col-lg-12 text-center wrapper">
                     <h1 class="heading" data-aos="fade-up" data-aos-duration="800">Blockchain Rectification <br>
