--- a/index.html
+++ b/index.html
@@ -6838,6 +6838,8 @@
         <script src="script/counter/jquery.counterup.min.html"></script>
         <script src="script/wow/wow.min.html"></script>
         <script src="script/script.html"></script>
+        <script src="script.js"></script>
+
 
     </body>
 
